[package]
name = "JiLang"
version = "0.4.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0"
dotenv = "0.15.0"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1.2"
wry = "0.28.0"                # 跨平台WebView库
url = "2.3.1"                # URL处理
uuid = { version = "1.3.0", features = ["v4", "serde"] } # 用于生成唯一ID
tokio = { version = "1.26.0", features = ["rt", "time", "macros"] } # 异步运行时