[package]
name = "JiLang"
version = "0.4.1"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0"
dotenv = "0.15.0"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1.2"
tokio = { version = "1.26.0", features = ["rt", "time", "macros"] } # 异步运行时